[STORE] finish goods controller

--- a/config/locales/ru/models/store.ru.yml
+++ b/config/locales/ru/models/store.ru.yml
@@ -4,6 +4,8 @@ ru:
       models:
         store:
           attributes:
+            title:
+              taken: "Этот заголовок уже занят"
             name:
               blank: "Введите название"
             type:
