--- a/config/locales/ru/models/store.ru.yml
+++ b/config/locales/ru/models/store.ru.yml
@@ -6,9 +6,10 @@ ru:
           attributes:
             title:
               taken: "Этот заголовок уже занят"
+              blank: "Введите заголовок"
             name:
               blank: "Введите название"
-            type:
+            speciality:
               blank: "Введите специализацию"
             store_country:
               blank: "Выберите страну"
