[SERVISE] all services

--- a/config/locales/ru/models/store.ru.yml
+++ b/config/locales/ru/models/store.ru.yml
@@ -7,6 +7,7 @@ ru:
             title:
               taken: "Этот заголовок уже занят"
               blank: "Введите заголовок"
+              invalid: "Заголовок должен состоять только из строчных латинских букв, цифр и символов \"-\" и \"_\", от 3 до 16 символов"
             name:
               blank: "Введите название"
             speciality:
