[BASKET] add & update

--- a/config/locales/ru/models/profile.ru.yml
+++ b/config/locales/ru/models/profile.ru.yml
@@ -6,3 +6,5 @@ ru:
           attributes:
             first_name:
               blank: "Введите имя"
+            phone_number:
+              wrong_length: "Номер телефона должен состоять из 11 цифр"
